WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14690
REGRESSION(24399-24479): Pressing Enter in a search field at apple.com no longer starts a search with Korean IM
https://bugs.webkit.org/show_bug.cgi?id=14690
Summary
REGRESSION(24399-24479): Pressing Enter in a search field at apple.com no lon...
Alexey Proskuryakov
Reported
2007-07-20 08:56:25 PDT
Steps to reproduce: 1) Activate any input mode of Hangul (or RuSwitcher). 2) Type something in a search field at apple.com; don't confirm the inline input area. 3) Press Enter. Expected results: a new page with search results opens (the users of these input methods do not expect that Enter is "eaten", unlike Kotoeri users). Results: the inline input area is confirmed.
Attachments
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2007-07-20 14:19:15 PDT
ap, what's the function that you implement for TSM? the one where you return true/false to indicate that an event has been handled?
Alexey Proskuryakov
Comment 2
2007-07-20 23:54:45 PDT
TSM components have a single entry point for all events; the one whose result we need to know is kCMTextServiceEvent.
Oliver Hunt
Comment 3
2007-07-23 15:20:11 PDT
Landed fix in
r24542
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug