LayoutTests:

Reviewed by Darin.

        Added initial pseudo-hangul IM, and tests for behaviour of hangul (<rdar://problem/5352152>)
        Updated keydown-keypress-preventDefault to be correct, and to have an demonstrate that keys have been inserted.
        Updated kotoeri test to perform more validation and check against updated behaviour

        * editing/input/mac/hangul-enter-confirms-and-sends-keypress-expected.txt: Added.
        * editing/input/mac/hangul-enter-confirms-and-sends-keypress.html: Added.
        * editing/input/mac/hangul.js: Added.
        * editing/input/mac/kotoeri-enter-to-confirm-and-newline.html:
        * fast/events/keydown-keypress-preventDefault-expected.txt:
        * fast/events/keydown-keypress-preventDefault.html:

WebCore:

        Reviewed by Darin.

        <rdar://problem/5353577> WebKit key event behaviour needs to better match other browsers keyevent behaviour
        <rdar://problem/5352152> REGRESSION (24399-24479): Pressing Enter in a search field at apple.com no longer starts a search with Korean IM
        <rdar://problem/5352649> WebKit should send keyDown event on autorepeat keyDowns
        http://bugs.webkit.org/show_bug.cgi?id=14690

        Perform Input Method call first so that our behaviour is determined by whether or not
        the input method has actually handle the event, rather than by making guesses based
        on the existences of marked text.  This fixes issues with IMs that have side effects
        even on events they do not handle.

        Refactored the code in order to improve clarity given the hoisting required by performing
        the IM call earlier.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::keyEvent):

WebKit:

        Reviewed by Darin.

        We have to be able to support insertText: followed by doCommandBySelector: in
        order to support the 2- and 3-Set Korean and RuSwitcher IMs at least.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView insertText:]):



Canonical link: https://commits.webkit.org/19184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24542 268f45cc-cd09-0410-ab3c-d52691b4dbfc